Fixed map not showing up on mobile in upcoming launch.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -382,7 +382,6 @@ button {
 }
 
 .map-component {
-  visibility: hidden;
   grid-row: 1 / 2;
 }
 
@@ -390,19 +389,9 @@ button {
   display: none;
 }
 
-.upcoming-map--desktop {
-  width: 90%;
-  /* height: 300px; */
-  margin: 1% 5%;
-  position: relative;
-  z-index: 0;
-
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
 .upcoming-map--mobile {
-  width: calc(100% - 5px);
+  /* width: calc(100% - 5px); */
+  width: 100%;
   height: 300px;
 }
 
@@ -417,11 +406,12 @@ button {
   margin: 3% 5%;
   background-color: #636262;
   border-radius: 3px;
+  transition: 0.2s;
 
   font-size: 24px;
   font-weight: 200;
   text-align: center;
-  transition: 0.2s;
+
   grid-column: 1 / 2;
   grid-row: 2 / 3;
 }
@@ -953,16 +943,9 @@ footer {
     grid-template-rows: 4fr 1fr;
   }
 
-  .map-component {
-    visibility: visible;
-  }
-
   .map-component > label {
     display: inherit;
-  }
-
-  .upcoming-map--desktop {
-    display: none;
+    margin-bottom: 5px;
   }
 
   .info-window-pad {
